@@ -4,6 +4,7 @@
 	h1 {font-size: 18pt;}
 	li {padding-bottom: 3px;}
 	</style><div style="font-family: Verdana; font-size: 12px;"><h1>Harmoni ChangeLog</h1><h2>Version 0.0.3</h2><h3>Not Released</h3><ul>
+		<li/> New feature:  FormFieldSet class under 'utilities' combines FieldSet functionality with keeping track of changed values and easy validation. Intended for HTML Form use. (<i>Gabe Schine</i>)
 		<li/> Change:   
 			Various fixes to the OSIDs. Added 'requires' for classes being extended. Fixed
 			syntax errors.
